  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/??

  * 0.14.1

Fixes


02/28/16 tyler.je.reddy, kain88-de, jbarnoud, richardjgowers, orbeckst
         manuel.nuno.melo, Balasubra, Saxenauts, mattihappy

  * 0.14.0

API Changes

  * Offsets files for Gromacs trajectory formats have been changed to a numpy
    style format '.npz'. Offsets files will be regenerated when you load a
    xtc/trr trajectory again. (Issue #441)
  * rotation_matrix now accepts array-likes as input

Enhancement

  * XDR file seeking errors now report system errno. (PR #678)
  * Offsets reading for xtc/trr files has been sped up. (Issue #441)
  * select_atoms now implicitly ORs multiple values after a keyword for
    many types of selections (Issue #345)
  * Performance improvements for the PDBReader of about 10%
  * LinearDensity analysis module added, which allows to compute linear mass
    and charge density profiles along the three cartesian axes of the cell.
    Works for orthorombic, fixed volume cells only. (Issue #670)
  * Trajectories can now be sliced using a boolean array (Issue #725)

Changes

  * xdrlib was rebranded libmdaxdr. (Issue #679)
  * xdrlib has been ported to cython. (Issue #441)
  * util.NamedStream no longer inherits from basestring (Issue #649)
  * Short TRZ titles are striped from trailing spaces. A friendlier error
    message is raised when the TRZ writer is asked to write a title longer
    than 80 characters. (Issue #689)
  * PDB doesn't save charge information anymore
  * coordinates.core.get_writer_for uses the user defined format if provided
    before trying to deduce the format from file extension. (Issue #712)

Fixes