@@ -13,12 +13,16 @@ The rules for this file:
   * release numbers follow "Semantic Versioning" http://semver.org
 
 ------------------------------------------------------------------------------
-??/??/??
+??/??/16 jandom
 
   * 0.14.1
 
 Fixes
 
+
+Changes
+
+  * Generalized contact analysis class added. (Issue #702)
 
 02/28/16 tyler.je.reddy, kain88-de, jbarnoud, richardjgowers, orbeckst
          manuel.nuno.melo, Balasubra, Saxenauts, mattihappy
